same thing just trying commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/b89b4b2308.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src='{% static "js/App.js" %}'></script>
     <link rel="stylesheet" href='{% static "css/style.css" %}'>
-    <title>Taleen</title>
+    <title>Virtual Lap</title>
 </head>
 
 <body>
