--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!-- you have to load static in every html page -->
 {%load static%}
 <!doctype html>
 <html lang="en">
@@ -11,7 +12,9 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b89b4b2308.js" crossorigin="anonymous"></script>
+    <!-- load each js file as this format exactly:src='{% static "js/App_name.js" %}' -->
     <script type="text/javascript" src='{% static "js/App.js" %}'></script>
+    <!-- load each css file as this format exactly: href='{% static "css/sheet_name.css" %}' -->
     <link rel="stylesheet" href='{% static "css/style.css" %}'>
     <title>Virtual Lap</title>
 </head>
@@ -20,6 +23,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+        <!-- load every image file as this format exactly: src='{% static "images/image_name.png" %}' -->
         <a class="navbar-brand margin-left" href='{% url 'Pages:virtual' %}'><img src='{% static "images/formula.png" %}' style="width:10%;" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
